--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monet</title>
+    <meta name="description" content= "Information about Claude Monet">
+    <title>About Claude Monet | Module 3 Assignment</title>
 </head>
 <body>
-    
+    <header>
+        <a href="#">Claude Monet</a>
+        <nav>
+            <a href="#About">About</a>
+            <a href="#Art">Art</a>
+        </nav>
+    </header>
+
+    <main>
+        <h1>Claude Monet</h1>
+        <section>
+            <article id="About">
+                <h2>About Monet</h2>
+                <p> Oscar-Claude Monet was a French painter born in 1840. He is known as 
+                    the founder of impressionist painting and recognized for his paintings of nature 
+                    and the world around him. Although he died in 1926, he is still seen as one of the most
+                    famous Western painters of all time. You can find his paintings displayed 
+                    in multiple museums across the world, including the Metropolitan Museum of Art in New York
+                    and the Louvre Museum in Paris, France.
+                </p>
+            </article>
+        </section>
+        <section id="Art">  
+            <article>
+                <h2>Popular Paintings</h2>
+                <h3>Water Lilies</h3>
+                <img src="images/claude-monet-water-lilies.jpg" width="400" alt="Water Lilies by Monet">
+                <h3>Impression Sunrise</h3>
+                <img src="images/claude-monet-impression-sunrise (1).jpg" width="400" alt="Impression Sunrise by Monet">
+            </article>
+        </section>
+    </main>
+    <footer>
+        &copy; Madison Hodge
+    </footer>
 </body>
 </html>
